# GTKPortScanner

./: .gitignore  README.md  com.stefanovazzoler.portscanner.json  meson.build
data/: com.stefanovazzoler.portscanner.appdata.xml.in  com.stefanovazzoler.portscanner.desktop.in  com.stefanovazzoler.portscanner.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.py  meson.build  packets.py  portdata.py  ports.py  portscanner.gresource.xml  portscanner.in  scanner.py  window.py  window.ui  window.ui~
